# python-project-starter

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  setup.py
docker/: run_docker.sh
tests/: __init__.py
{{package}}/: __init__.py
