[tool.poetry]
name = "{{package}}"
version = "0.1.0"
description = "{{description}}"
authors = ["{{author}} <{{email}}>"]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^57.4.0"
pytest = {version = "^6.2.4", extras = ["test"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
